{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 18,
  "lineage": "feaed84f-6732-3a53-37d3-bfdc5024d286",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e557e6544e62b664",
            "arn": "arn:aws:ec2:us-east-1:448014237739:elastic-ip/eipalloc-0e557e6544e62b664",
            "domain": "vpc",
            "id": "eipalloc-0e557e6544e62b664",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-108-200.compute-1.amazonaws.com",
            "public_ip": "34.228.108.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c819f65440d5f1d1",
            "arn": "arn:aws:ec2:us-east-1:448014237739:instance/i-05776f31ce500b269",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05776f31ce500b269",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Vikas-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7edaa4c3c67468f",
            "private_dns": "ip-10-0-132-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.132.249",
            "public_ip": "54.81.28.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a16d2b4c4e3e9344",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cb2fb080f6cc2942"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9d411958d4e88ae",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb2fb080f6cc2942"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c819f65440d5f1d1",
            "arn": "arn:aws:ec2:us-east-1:448014237739:instance/i-0e2c39710735e1f68",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2c39710735e1f68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Vikas-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc8cc104d2c5de95",
            "private_dns": "ip-10-0-19-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.19.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f8ba1f334cbf0f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cb2fb080f6cc2942"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eab0c27718045bd",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb2fb080f6cc2942"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.private_subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:internet-gateway/igw-0ebe84e18be8e1380",
            "id": "igw-0ebe84e18be8e1380",
            "owner_id": "448014237739",
            "tags": {
              "Name": "ninja-igw"
            },
            "tags_all": {
              "Name": "ninja-igw"
            },
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e557e6544e62b664",
            "association_id": "eipassoc-04c12979fd179f22f",
            "connectivity_type": "public",
            "id": "nat-07c198e44ddb9a356",
            "network_interface_id": "eni-007e56f09b24e18af",
            "private_ip": "10.0.128.22",
            "public_ip": "34.228.108.200",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9d411958d4e88ae",
            "tags": {
              "Name": "ninja-nat"
            },
            "tags_all": {
              "Name": "ninja-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:route-table/rtb-0612f1575470f409c",
            "id": "rtb-0612f1575470f409c",
            "owner_id": "448014237739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07c198e44ddb9a356",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ninja-pri-routeT"
            },
            "tags_all": {
              "Name": "ninja-pri-routeT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:route-table/rtb-0bc963d0a4c713438",
            "id": "rtb-0bc963d0a4c713438",
            "owner_id": "448014237739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebe84e18be8e1380",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ninja-pub-routeT"
            },
            "tags_all": {
              "Name": "ninja-pub-routeT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0417a4c1b745f8a76",
            "route_table_id": "rtb-0612f1575470f409c",
            "subnet_id": "subnet-01eab0c27718045bd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3adc97841f70fd0",
            "route_table_id": "rtb-0612f1575470f409c",
            "subnet_id": "subnet-003f39f7f58fccc38"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0721b54d3c595fb94",
            "route_table_id": "rtb-0bc963d0a4c713438",
            "subnet_id": "subnet-0e9d411958d4e88ae"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a96744c409e503c",
            "route_table_id": "rtb-0bc963d0a4c713438",
            "subnet_id": "subnet-0f51843488612079b"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:security-group/sg-0cb2fb080f6cc2942",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb2fb080f6cc2942",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "448014237739",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:subnet/subnet-01eab0c27718045bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eab0c27718045bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448014237739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pri-sub-01"
            },
            "tags_all": {
              "Name": "ninja-pri-sub-01"
            },
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:subnet/subnet-003f39f7f58fccc38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003f39f7f58fccc38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448014237739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pri-sub-02"
            },
            "tags_all": {
              "Name": "ninja-pri-sub-02"
            },
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:subnet/subnet-0e9d411958d4e88ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9d411958d4e88ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448014237739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-01"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-01"
            },
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:subnet/subnet-0f51843488612079b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f51843488612079b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448014237739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-02"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-02"
            },
            "vpc_id": "vpc-01d328c03d483c4ee"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninja-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:448014237739:vpc/vpc-01d328c03d483c4ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f31d96d70f47912",
            "default_route_table_id": "rtb-063e3594656ffc237",
            "default_security_group_id": "sg-081ec51f1b0669163",
            "dhcp_options_id": "dopt-0d81dad259859a909",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d328c03d483c4ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063e3594656ffc237",
            "owner_id": "448014237739",
            "tags": {
              "Name": "ninja-vpc"
            },
            "tags_all": {
              "Name": "ninja-vpc"
            }
          }
        }
      ]
    }
  ]
}